--- a/QuestionService/QuestionService/src/main/resources/application.properties
+++ b/QuestionService/QuestionService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=QuestionService
+spring.application.name=QUESTION-SERVICE
 server.port=9081
 spring.datasource.url=jdbc:mysql://localhost:3306/quizmicro
 spring.datasource.username=root
