--- a/QuizService/QuizService/src/main/resources/application.properties
+++ b/QuizService/QuizService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=QuizService
+spring.application.name=QUIZ-SERVICE
 server.port = 8082
 spring.datasource.url=jdbc:mysql://localhost:3306/quizmicro
 spring.datasource.username=root
